2005-02-01  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Include missing-texi2html.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that Perl is no longer required to build.
	* configure.ac: Don't search for texinfo programs handled by Automake.
	Declare PERL a precious var.  Exit when not found and not set.  Warn
	when set to a relative path.
	* missing-texi2html, doc/texi2html.html: New files.
	* doc/.cvsignore: Add more intermediate files.
	* doc/Makefile.am: Remove targets autogenerated by Automake.
	(EXTRA_DIST): Distribute texi2html.html.
	(texi2html.html): Call texi2html via missing-texi2html.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in, NEWS: Update for development.
	* configure.in: Rename to...
	* configure.ac: ...this, to match current Autoconf standards.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in, NEWS: Update for the 1.74 release.

2005-01-16  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: more robust handling of deffn lines.
	The argument may be in bracket, therefore there is no difference
	beteen arg and other item specification for def like commands.
	* Tests: test for more deffn lines, and for @-commands in floats.
	* doc/texi2html.texi: update.

2005-01-16  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: close quotes within html elements. Apply commands
	to @item lines in table after leading and trailing spaces removal.
	* Tests: regenerate.

2005-01-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle explicitely formats that don't
	trigger paragraph opening. Handle all commands even those that aren't
	used. End lines more correctly. 

2004-12-29  Derek Price  <derek@ximbiot.com>

	* NEWS: Date the 1.72 release.

2004-12-29  Derek Price  <derek@ximbiot.com>

	* configure.in: Update for 1.72 release.
	* Makefile.in, aclocal.m4, configure, Tests/Makefile.in,