@@ -5961,7 +5961,7 @@ directory.
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Derek R. Price</em> on <em>February, 1 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.75</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>February, 1 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.75</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -6063,7 +6063,7 @@ directory.
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Derek R. Price</em> on <em>February, 1 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.75</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>February, 1 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.75</em></a>.
  </font>
  <br>
 
