@@ -1,3 +1,8 @@
+2005-02-01  Patrice Dumas  <dumas@centre-cired.fr>
+
+	* texi2html.init, examples/chm.init: remove our keywords for old
+	perl.
+
 2005-02-01  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (EXTRA_DIST): Include missing-texi2html.
